# kernel-rpg

./: .gitignore  README.md
game/: app.js  index.html  package.json  snakeLogic.js  styles.css
game/.claude/: settings.local.json
game/.github/workflows/: ci.yml  macos-app-build.yml
game/windows-assembly-rpg-lesson1/: README.md  eslint.config.js  game.js  index.html  package.json  styles.css
game/windows-assembly-rpg-lesson1/scripts/: smoke-test.js
game/windows-assembly-rpg-lesson1/src-tauri/: Cargo.toml  tauri.conf.json
