[package]
name = "kernel-academy-ring0"
version = "0.1.0"
description = "Kernel Academy: Ring-0 Chronicles macOS app"
authors = ["Kernel Academy Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
